<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/portadaImg"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/toy_story"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="@color/imageForeground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <ImageView
        android:id="@+id/coverImg"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:src="@drawable/cover_page"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/guideH1"
        app:layout_constraintBottom_toTopOf="@id/guideH2"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias="0" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/coverImg"
        app:layout_constraintTop_toBottomOf="@id/portadaImg"
        app:layout_constraintBottom_toTopOf="@id/guideH2"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias=".1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/guideH2"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintBottom_toTopOf="@id/guideH3">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rent" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/guideH3"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>